add redis pubsub for chat action
